# age-of-dataframes

./: .gitignore  Makefile  README.md  aoedata.py  blogpost.ipynb  pyproject.toml  requirements.txt
